# ironrookie

./: README.md  flake.nix
.githooks/: pre-commit
.github/workflows/: cargo-checkmate.yaml  cargo-checkmate.yml  rust.yml
secrets/: Cargo.toml
secrets/src/: lib.rs  message.rs  signing.rs
