[package]
name = "secrets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = {  version = "2.1.1", features = ["rand_core", "pkcs8", "pem"] }
rmp-serde = "1.1.2"
serde = { version = "1.0.196", features = ["derive"] }
rand_core = { version = "0.6.4" , features = ["getrandom"] }
